--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.3'
+version: '2.4'
 services:
-  snake:
-    image: "rahlou/real-estate-web:latest"
-    environment:
-      - "PORT:3000"
+  apache:
+    image: rahlou/cybr3120:latest
+    container_name: container
     ports:
-      - "80:3000"
+    - '80:80'
     volumes:
-      - ./:/app
+    - .:/usr/local/apache2/htdocs
