--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.4'
 services:
   apache:
-    image: rahlou/cybr3120:latest
+    image: rahlou/real-estate-web:latest
     container_name: container
     ports:
     - '80:80'
